--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -99,7 +99,7 @@ add_example(tutorial_client_events tutorial_client_events.c)
 if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
   add_example(tutorial_server_events tutorial_server_events.c)
   if(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
-    add_example(tutorial_server_events tutorial_server_alarms_conidtions.c)
+    add_example(tutorial_server_alarms_conditions tutorial_server_alarms_conidtions.c)
   endif()
 endif()
 
