--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -38,6 +38,7 @@
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
+#cmakedefine UA_ENABLE_PUBSUB_MQTT
 
 /* Multithreading */
 #cmakedefine UA_ENABLE_IMMUTABLE_NODES
