PubSub: Add MQTT support
 - Rebase to Master branch
 - Modify Server APIs un tutorial_pubsub_mqtt.c
 - ToDo:Resolve unit test error in check_pubsub_connection_mqtt.c

Change-Id: I5ad885a4594f55e71629c6718920360aee4ed179

--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -37,6 +37,7 @@
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
+#cmakedefine UA_ENABLE_PUBSUB_MQTT
 
 /* Multithreading */
 #cmakedefine UA_ENABLE_MULTITHREADING
