--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -189,4 +189,10 @@ if(UA_ENABLE_PUBSUB)
         add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
         add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
     endif()
+    if(UA_ENABLE_PUBSUB_MQTT)
+        if(NOT WIN32)
+            include_directories(${PROJECT_SOURCE_DIR}/../plugins)
+            add_example(tutorial_pubsub_mqtt pubsub/tutorial_pubsub_mqtt.c)
+        endif()
+    endif()
 endif()
