Added a nodestore switch as plugin.
Co-authored-by: Torben Deppe <t.deppe@plt.rwth-aachen.de>

--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -47,6 +47,7 @@
 
 /* Advanced Options */
 #cmakedefine UA_ENABLE_CUSTOM_NODESTORE
+#cmakedefine UA_ENABLE_NODESTORE_SWITCH
 #cmakedefine UA_ENABLE_STATUSCODE_DESCRIPTIONS
 #cmakedefine UA_ENABLE_TYPENAMES
 #cmakedefine UA_ENABLE_NODESET_COMPILER_DESCRIPTIONS
