Added an example for the nodestore switch.
Co-authored-by: Torben Deppe <t.deppe@plt.rwth-aachen.de>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -173,6 +173,10 @@ endif()
 
 add_subdirectory(nodeset)
 
+if(UA_ENABLE_CUSTOM_NODESTORE AND UA_ENABLE_NODESTORE_SWITCH)
+    add_example(server_nodestore_switch server_nodestore_switch.c)
+endif()
+
 ####################
 #  Example PubSub  #
 ####################
