Example: Secure client using encrypted UserIdentityToken (Username/password)
 - This commit contains access control application using encryption for
   username/password token policy

Change-Id: I34b3ed6a0d2f9a7ada20de8237b6c21bb80c4cef
Signed-off-by: Jayanth Velusamy <jayanth.v@kalycito.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -162,6 +162,9 @@ add_example(custom_datatype_server custom_datatype/server_types_custom.c)
 if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
+    if(UA_ENABLE_ENCRYPTION)
+    add_example(access_control_client_encrypt access_control_encrypt/client_access_control_encrypt.c)
+    endif()
 endif()
 
 if(UA_ENABLE_DISCOVERY_MULTICAST)
