--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -53,16 +53,22 @@ endif()
 list(APPEND LIBS "${open62541_LIBRARIES}")
 
 # Use different plugins for testing
-set(fuzzing_plugin_sources ${PROJECT_SOURCE_DIR}/arch/network_tcp.c
-    ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_clock.c
-    ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_networklayers.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_log_stdout.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_config_default.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_nodestore_ziptree.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_nodestore_hashmap.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_accesscontrol_default.c
-    ${PROJECT_SOURCE_DIR}/plugins/ua_pki_default.c
-    ${PROJECT_SOURCE_DIR}/plugins/securityPolicies/ua_securitypolicy_none.c
+set(fuzzing_plugin_sources
+        ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_clock.c
+        ${PROJECT_SOURCE_DIR}/tests/testing-plugins/testing_socket.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_log_stdout.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_config_default.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_nodestore_ziptree.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_nodestore_hashmap.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_accesscontrol_default.c
+        ${PROJECT_SOURCE_DIR}/plugins/historydata/ua_history_data_backend_memory.c
+        ${PROJECT_SOURCE_DIR}/plugins/historydata/ua_history_data_gathering_default.c
+        ${PROJECT_SOURCE_DIR}/plugins/historydata/ua_history_database_default.c
+        ${PROJECT_SOURCE_DIR}/plugins/ua_pki_default.c
+        ${PROJECT_SOURCE_DIR}/plugins/securityPolicies/ua_securitypolicy_none.c
+        ${PROJECT_SOURCE_DIR}/plugins/networking/ua_tcp_listener_socket.c
+        ${PROJECT_SOURCE_DIR}/plugins/networking/ua_tcp_data_socket.c
+        ${PROJECT_SOURCE_DIR}/plugins/networking/ua_select_based_networkmanager.c
 )
 
 if(UA_ENABLE_ENCRYPTION)
